--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-pinch-zoom-pan": "^1.4.5",
     "react-scripts": "3.0.1"
   },
   "scripts": {
