--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "merge-images": "^1.1.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-modal": "^3.8.2",
     "react-pinch-zoom-pan": "^1.4.5",
     "react-redux": "^7.1.0",
     "react-scripts": "3.0.1",
