--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "merge-images": "^1.1.0",
+    "node-sass": "^4.12.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-map-interaction": "^1.3.0",
     "react-modal": "^3.8.2",
     "react-pinch-zoom-pan": "^1.4.5",
     "react-redux": "^7.1.0",
